--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --bg-color: #1f242d;
     --second-bg-color:#323946;
     --text-color:#fff;
-    --main-color:#0ef;
+    --main-color:#E9A178;
 }
 html{
     font-size: 62.5%;
@@ -83,7 +83,7 @@ section{
 
 .home-content h3{
     font-size: 3.2rem;
-    font-weight:700;
+    font-weight:900;
 }
 .home-content h3:nth-of-type(2) {
     margin-bottom: 2rem;
@@ -94,13 +94,13 @@ span{
 }
 
 .home-content h1{
-    font-size: 56px;
+    font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
 .home-content p{
-    font-size: 16px;
+    font-size: 1.6rem;
 }
 
 .home-img {
@@ -111,12 +111,12 @@ span{
 .social-media a {
     display: inline-flex;
     justify-content: center;
-    width: 40px;
-    height:40px;
+    width: 4rem;
+    height:4rem;
     background:transparent;
-    border: 2px solid var(--main-color);
+    border: .2rem solid var(--main-color);
     border-radius: 50%;
-    font-size:20px;
+    font-size:2rem;
     color: var(--main-color);
     align-items: center;
     margin: 3rem 1.5rem 3rem 0;
@@ -153,7 +153,7 @@ transition: .5s ease;
     justify-content: center;
     align-items: center;
     gap:2rem;
-    background:var(--bg-color);
+    background:var(--second-bg-color);
 }
 
 .about-img {
@@ -281,4 +281,44 @@ transition: .5s ease;
 .seminar-layer a i{
     font-size: 2rem;
     color: var(--second-bg-color);
+}
+
+.contact h2{
+    margin-bottom: 3rem;
+}
+
+.contact form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact form .input-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box input, .contact form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color:var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+
+.contact form .input-box input{
+    width: 49%;
+}
+
+.contact form textarea{
+    resize: none;
+}
+
+.contact form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
 }
